crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__second__multiple__specifier_periodic__range_periodic.snap
---
source: crates/tools/cron/src/tests/unit/second.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    "/2,1-59/2",
                    '-',
                ),
                Nom(
                    "1/2,1-59/2",
                    Alt,
                ),
            ],
        },
    ),
)
